--- a/src/Pages/Home/Service/Service.css
+++ b/src/Pages/Home/Service/Service.css
@@ -2,7 +2,8 @@
     border: 1px solid rgb(111, 111, 111);
     border-radius:16px;
     padding:12px;
-    width: 80%;
+    width: 100%;
+    margin-top: 30px;
 }
 .service-container img{
     width: 80%;
